# notellm

./: ..gitignore.~undo-tree~  .env.jupyter  .gitignore  CLAUDE.md  LICENSE  README.md  notellm  pyproject.toml  setup.sh  uninstall.sh
archive/: README.md
archive/cc_jupyter/: __init__.py  capture_helpers.py  config_manager.py  constants.py  jupyter_integration.py  magics.py
docs/: demo.html  demo.ipynb
lib/: notebook_utils.py
lib/notellm_magic/: __init__.py
notellm_magic/: README.md  __init__.py
notellm_magic/cc_jupyter/: cell_watcher.py  claude_client.py  history_manager.py  jupyter_integration.py  magics.py  prompt_builder.py  variable_tracker.py
src/: cc_notebook_helpers.py  patch_jupyter_magic.sh
templates/: .gitignore  .notellm_template.ipynb  CLAUDE.md  TestSuite.ipynb  install.sh  patch_jupyter_magic.sh  purge_manifest.txt  pyproject.toml  settings.json  template.ipynb
templates/src/: cc_notebook_helpers.py  notebook_utils.py
