[project]
name = "notellm-workspace"
version = "0.1.0"
description = "Jupyter + Claude Code workspace"
requires-python = ">=3.12"

dependencies = [
    # Core data science
    "pandas>=2.2",
    "numpy>=2.0",
    "polars>=1.0",
    
    # Visualization
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "altair>=5.3",
    "vegafusion[embed]>=1.6",
    
    # JupyterLab + collaboration (required for MCP server)
    "jupyterlab>=4.2",
    "jupyter-collaboration>=3.0",
    "ipykernel>=6.29",
    
    # Claude Code Jupyter magic
    "claude-code-jupyter-staging>=0.0.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]
